--- a/package.json
+++ b/package.json
@@ -25,13 +25,16 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.483.0",
     "mongoose": "^8.12.1",
+    "net": "^1.0.2",
     "next": "15.2.2",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "redis": "^4.7.0",
     "tailwind-merge": "^3.0.2",
+    "tls": "^0.0.1",
     "tw-animate-css": "^1.2.4",
     "zod": "^3.24.2"
   },
@@ -41,6 +44,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/redis": "^4.0.10",
     "eslint": "^9",
     "eslint-config-next": "15.2.2",
     "tailwindcss": "^4",
