--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "tailwind-merge": "^3.0.2",
     "tls": "^0.0.1",
     "tw-animate-css": "^1.2.4",
+    "url": "^0.11.4",
     "zod": "^3.24.2"
   },
   "devDependencies": {
