--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "tls": "^0.0.1",
     "tw-animate-css": "^1.2.4",
     "url": "^0.11.4",
+    "uuid": "^11.1.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
