--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ioredis": "^5.6.0",
     "jsonwebtoken": "^9.0.2",
     "kafkajs": "^2.2.4",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.483.0",
     "mongoose": "^8.12.1",
     "net": "^1.0.2",
@@ -48,6 +49,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
