--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@reduxjs/toolkit": "^2.6.1",
     "@upstash/redis": "^1.34.6",
     "axios": "^1.8.3",
     "bcryptjs": "^3.0.2",
@@ -37,6 +38,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-redux": "^9.2.0",
     "redis": "^4.7.0",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
