--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@reduxjs/toolkit": "^2.6.1",
+    "@tanstack/react-query": "^5.72.1",
+    "@tanstack/react-query-devtools": "^5.72.1",
+    "@tanstack/react-query-next-experimental": "^5.72.1",
     "@upstash/redis": "^1.34.6",
     "axios": "^1.8.3",
     "bcryptjs": "^3.0.2",
@@ -33,7 +36,7 @@
     "lucide-react": "^0.483.0",
     "mongoose": "^8.12.1",
     "net": "^1.0.2",
-    "next": "^15.2.3",
+    "next": "^15.3.0-canary.45",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
