--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-hook-form": "^7.54.2",
     "react-redux": "^9.2.0",
     "redis": "^4.7.0",
+    "redux-persist": "^6.0.0",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tls": "^0.0.1",
@@ -60,6 +61,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/redis": "^4.0.10",
+    "@types/redux-persist": "^4.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.2.2",
     "tailwindcss": "^4",
