--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "lucide-react": "^0.483.0",
     "mongoose": "^8.12.1",
     "net": "^1.0.2",
-    "next": "^15.3.1-canary.4",
+    "next": "^15.3.0",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
@@ -45,6 +45,7 @@
     "react-redux": "^9.2.0",
     "redis": "^4.7.0",
     "redux-persist": "^6.0.0",
+    "redux-persist-transform-encrypt": "^5.1.1",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tls": "^0.0.1",
