--- a/package.json
+++ b/package.json
@@ -23,9 +23,6 @@
     "@radix-ui/react-tabs": "^1.1.8",
     "@radix-ui/react-tooltip": "^1.2.3",
     "@reduxjs/toolkit": "^2.6.1",
-    "@tanstack/react-query": "^5.72.1",
-    "@tanstack/react-query-devtools": "^5.72.1",
-    "@tanstack/react-query-next-experimental": "^5.72.1",
     "@upstash/redis": "^1.34.6",
     "axios": "^1.8.3",
     "bcryptjs": "^3.0.2",
@@ -47,6 +44,7 @@
     "react-hook-form": "^7.54.2",
     "redis": "^4.7.0",
     "sonner": "^2.0.1",
+    "swr": "^2.3.3",
     "tailwind-merge": "^3.0.2",
     "tls": "^0.0.1",
     "tw-animate-css": "^1.2.4",
