--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "express-rate-limit": "^7.5.0",
     "ioredis": "^5.6.0",
     "jose": "^6.0.10",
     "jsonwebtoken": "^9.0.2",
