--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-collapsible": "^1.1.3",
-    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-progress": "^1.1.4",
@@ -30,6 +30,7 @@
     "clsx": "^2.1.1",
     "dompurify": "^3.2.5",
     "express-rate-limit": "^7.5.0",
+    "input-otp": "^1.4.2",
     "ioredis": "^5.6.0",
     "jose": "^6.0.10",
     "jsonwebtoken": "^9.0.2",
