--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/upstash-redis-adapter": "^2.8.0",
+    "@emailjs/browser": "^4.4.1",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-collapsible": "^1.1.3",
@@ -29,6 +30,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dompurify": "^3.2.5",
+    "emailjs": "^4.0.3",
     "express-rate-limit": "^7.5.0",
     "input-otp": "^1.4.2",
     "ioredis": "^5.6.0",
