--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-progress": "^1.1.4",
     "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-separator": "^1.1.2",
+    "@radix-ui/react-slider": "^1.3.2",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.8",
     "@radix-ui/react-tooltip": "^1.2.3",
@@ -29,10 +30,15 @@
     "axios": "^1.8.3",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.6.0",
     "clsx": "^2.1.1",
     "dompurify": "^3.2.5",
     "emailjs": "^4.0.3",
     "express-rate-limit": "^7.5.0",
+    "file-type": "^20.5.0",
+    "framer-motion": "^12.9.7",
+    "fs": "^0.0.1-security",
+    "image-size": "^2.0.2",
     "input-otp": "^1.4.2",
     "ioredis": "^5.6.0",
     "jose": "^6.0.10",
@@ -44,9 +50,12 @@
     "net": "^1.0.2",
     "next": "^15.3.0",
     "next-auth": "^5.0.0-beta.25",
+    "next-cloudinary": "^6.16.0",
+    "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-easy-crop": "^5.4.1",
     "react-hook-form": "^7.54.2",
     "redis": "^4.7.0",
     "sonner": "^2.0.1",
