--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.8",
     "@radix-ui/react-tooltip": "^1.2.3",
-    "@reduxjs/toolkit": "^2.6.1",
+    "@reduxjs/toolkit": "^2.8.1",
+    "@tanstack/react-query": "^5.76.1",
     "@upstash/redis": "^1.34.6",
     "axios": "^1.8.3",
     "bcryptjs": "^3.0.2",
@@ -57,7 +58,9 @@
     "react-dom": "^19.0.0",
     "react-easy-crop": "^5.4.1",
     "react-hook-form": "^7.54.2",
+    "react-redux": "^9.2.0",
     "redis": "^4.7.0",
+    "redux-persist": "^6.0.0",
     "sonner": "^2.0.1",
     "swr": "^2.3.3",
     "tailwind-merge": "^3.0.2",
@@ -70,6 +73,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@tanstack/eslint-plugin-query": "^5.74.7",
     "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20",
     "@types/react": "^19",
