--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "emailjs": "^4.0.3",
     "express-rate-limit": "^7.5.0",
     "file-type": "^20.5.0",
+    "formidable": "^3.5.4",
     "framer-motion": "^12.9.7",
     "fs": "^0.0.1-security",
     "image-size": "^2.0.2",
@@ -75,6 +76,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@tanstack/eslint-plugin-query": "^5.74.7",
+    "@types/formidable": "^3.4.5",
     "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20",
     "@types/react": "^19",
