--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.13.8",
+    "@apollo/server": "^4.12.1",
+    "@as-integrations/next": "^3.2.0",
     "@auth/upstash-redis-adapter": "^2.8.0",
     "@emailjs/browser": "^4.4.1",
     "@hookform/resolvers": "^4.1.3",
@@ -28,6 +31,7 @@
     "@reduxjs/toolkit": "^2.8.1",
     "@tanstack/react-query": "^5.76.1",
     "@tanstack/react-query-devtools": "^5.76.1",
+    "@types/graphql": "^14.2.3",
     "@upstash/redis": "^1.34.6",
     "axios": "^1.8.3",
     "bcryptjs": "^3.0.2",
@@ -41,6 +45,9 @@
     "formidable": "^3.5.4",
     "framer-motion": "^12.9.7",
     "fs": "^0.0.1-security",
+    "graphql": "^16.11.0",
+    "graphql-tag": "^2.12.6",
+    "graphql-type-json": "^0.3.2",
     "image-size": "^2.0.2",
     "input-otp": "^1.4.2",
     "ioredis": "^5.6.0",
@@ -56,6 +63,7 @@
     "next-cloudinary": "^6.16.0",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.6",
+    "nexus": "^1.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-easy-crop": "^5.4.1",
@@ -78,7 +86,7 @@
     "@tanstack/eslint-plugin-query": "^5.74.7",
     "@types/formidable": "^3.4.5",
     "@types/lodash.debounce": "^4.0.9",
-    "@types/node": "^20",
+    "@types/node": "^20.17.52",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/redis": "^4.0.10",
