--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react-redux": "^9.2.0",
     "redis": "^4.7.0",
     "redux-persist": "^6.0.0",
+    "resend": "^4.6.0",
     "sonner": "^2.0.1",
     "swr": "^2.3.3",
     "tailwind-merge": "^3.0.2",
