--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.6.0",
     "clsx": "^2.1.1",
+    "crypto-js": "^4.2.0",
     "dompurify": "^3.2.5",
     "emailjs": "^4.0.3",
     "express-rate-limit": "^7.5.0",
@@ -85,6 +86,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@tanstack/eslint-plugin-query": "^5.74.7",
+    "@types/crypto-js": "^4.2.2",
     "@types/formidable": "^3.4.5",
     "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20.17.52",
