--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@tanstack/react-query-devtools": "^5.76.1",
     "@types/graphql": "^14.2.3",
     "@upstash/redis": "^1.34.6",
+    "apollo": "^2.11.1",
     "axios": "^1.8.3",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
@@ -74,7 +75,6 @@
     "redux-persist": "^6.0.0",
     "resend": "^4.6.0",
     "sonner": "^2.0.1",
-    "swr": "^2.3.3",
     "tailwind-merge": "^3.0.2",
     "tls": "^0.0.1",
     "tw-animate-css": "^1.2.4",
