--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.2",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "webpack-cli": "^6.0.1"
   }
 }
