--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@apollo/client": "^3.13.8",
     "@apollo/server": "^4.12.1",
+    "@arcjet/inspect": "^1.0.0-beta.9",
+    "@arcjet/next": "^1.0.0-beta.9",
     "@as-integrations/next": "^3.2.0",
     "@auth/upstash-redis-adapter": "^2.8.0",
     "@emailjs/browser": "^4.4.1",
