--- a/package.json
+++ b/package.json
@@ -69,15 +69,16 @@
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.6",
     "nexus": "^1.3.0",
+    "radix-ui": "^1.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-easy-crop": "^5.4.1",
-    "react-hook-form": "^7.54.2",
+    "react-hook-form": "^7.60.0",
     "react-redux": "^9.2.0",
     "redis": "^4.7.0",
     "redux-persist": "^6.0.0",
     "resend": "^4.6.0",
-    "sonner": "^2.0.1",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^3.0.2",
     "tls": "^0.0.1",
     "tw-animate-css": "^1.2.4",
