--- a/package.json
+++ b/package.json
@@ -21,14 +21,15 @@
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.2.3",
     "@radix-ui/react-collapsible": "^1.1.3",
-    "@radix-ui/react-dialog": "^1.1.11",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-progress": "^1.1.4",
     "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slider": "^1.3.2",
-    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.8",
     "@radix-ui/react-tooltip": "^1.2.3",
     "@reduxjs/toolkit": "^2.8.1",
@@ -42,6 +43,8 @@
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.6.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
+    "country-data-list": "^1.4.1",
     "crypto-js": "^4.2.0",
     "dompurify": "^3.2.5",
     "emailjs": "^4.0.3",
@@ -71,9 +74,11 @@
     "nexus": "^1.3.0",
     "radix-ui": "^1.4.2",
     "react": "^19.0.0",
+    "react-circle-flags": "^0.0.23",
     "react-dom": "^19.0.0",
     "react-easy-crop": "^5.4.1",
     "react-hook-form": "^7.60.0",
+    "react-phone-number-input": "^3.4.12",
     "react-redux": "^9.2.0",
     "redis": "^4.7.0",
     "redux-persist": "^6.0.0",
